--- a/graphics/districts/css/_layout.scss
+++ b/graphics/districts/css/_layout.scss
@@ -1,3 +1,97 @@
-.article-graphic.districts {
 	
+#graphic-container {
+	position:relative;
+	width:50%; margin:0 25%;
+	}
+
+
+.article-graphic.districts {
+
+#graphic-container #chart {
+  width:100%;
+}
+
+#graphic-container g {
+	fill:#EEE;
+	stroke:rgba(191,97,81,.6);
+	stroke-width:1px;
+}
+
+
+#timeline {position:absolute;}
+.hoverbox {position:absolute; padding:0.5em; background:#FFF; box-shadow:1px 1px 8px rgba(0,0,0,.4); z-index:300; font-family:"BentonSans", BentonSans, sans-serif; line-height:1.3em; min-width:100px; max-width:200px;}
+.statename {color: #9B1518;
+font: normal 0.8em/1.3 Helvetica, Arial, sans-serif;
+letter-spacing: 0.01em;
+text-transform: uppercase; clear:both;}
+.summ { font: normal 0.8em/1.3 Helvetica, Arial, sans-serif;
+ } 
+ .yesorno { font: normal 0.8em/1.3 Helvetica, Arial, sans-serif;
+ } 
+.statepct {font-weight:bold; clear:both;}
+.statenum {}
+
+.boxkey {width: 1em; height:1em; float:left; margin-right:10px;}
+.gfx-list {width: 45%; margin-right:3%; float:left; margin-bottom:7px;}
+
+#legend {padding-bottom:40px; clear:both; float:left; width:100%;}
+
+@media screen and (max-width: 600px) {
+	
+		#graphic-container {
+
+	width:98%!important; margin:0 1%!important;
+	}
+.gfx-list {width: 17%;}
+}
+
+
+  .my-legend .legend-title {
+    font: normal 0.8em/1.3 Helvetica, Arial, sans-serif;
+
+    text-align: left;
+    margin-bottom: 8px;
+    font-weight: bold;
+    font-size: 90%;
+    }
+  .my-legend .legend-scale ul {
+        font: normal 0.8em/1.3 Helvetica, Arial, sans-serif;
+
+    margin: 0;
+    padding: 0;
+    float: left;
+    list-style: none;
+    }
+  .my-legend .legend-scale ul li {
+        font: normal 0.8em/1.3 Helvetica, Arial, sans-serif;
+
+    display: block;
+    float: left;
+    width: 60px;
+    margin-bottom: 6px;
+    text-align: center;
+    font-size: 80%;
+    list-style: none;
+    }
+  .my-legend ul.legend-labels li span {
+    font: normal 0.8em/1.3 Helvetica, Arial, sans-serif;
+
+    display: block;
+    float: left;
+    height: 15px;
+    width: 60px;
+    }
+  .my-legend .legend-source {
+    font: normal 0.8em/1.3 Helvetica, Arial, sans-serif;
+
+    font-size: 70%;
+    color: #999;
+    clear: both;
+    }
+  .my-legend a {
+    font: normal 0.8em/1.3 Helvetica, Arial, sans-serif;
+
+    color: #777;
+    }
+
 }
